# pattern

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  tox.ini
docs/: conf.py  index.rst
models/: .gitignore  scaler.pickle
notebooks/: Anya_2.ipynb  Pattern_2.ipynb  Pattern_Optuna.ipynb  bybit.ipynb  pipeline.ipynb  predicting.py
reports/figures/: .gitignore
src/data/: load_from_binance.py  preprocessing.py
src/models/: clustering.py  optimize.py
src/visualization/: cl_visualizer.py
workflows/: load_binance_stocks.py  optuna_optimize.py  params.yaml  slice_trading_ts.py  train_save_best.py  visualization.py
