[tool.poetry]
name = "pattern_or_coincidence"
version = "0.1.0"
description = "Searching for patterns on stock price charts"
repository = "https://gitlab.com/markstas55/pattern_or_coincidence"
authors = ["stocks-patterns_team <fasthydra@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.2"
h5py = "^3.8.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
pre-commit = "^3.2.2"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
apimoex = "^1.3.0"
tqdm = "^4.65.0"
click = "^8.1.3"
pathlib = "^1.0.1"
mypy = "^1.2.0"
types-requests = "^2.29.0.0"
dvc = {extras = ["s3"], version = "^2.56.0"}
tslearn = "^0.5.3.2"
typing = "3.7.4.3"
kaleido = "0.2.1"
llvmlite = "^0.40.1"
optuna = "^3.3.0"

[tool.poetry.scripts]
load_data = 'src.data.load_data_from_moex:load_data_from_apimoex'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.flake8]
ignore = ['E203', 'W503', 'F821']
max-line-length = 79
max-complexity = 10
exclude = "docs/"

